# IMAC_S3_maths_info

./: .gitignore  CMakeLists.txt  documentReponse.ty  vecs.txt
inc/: Entry.hpp  Faiseau.hpp  Geogebra_conics.hpp  files.cpp  files.hpp  path_management.hpp  path_managment.h  pencil.hpp  random.hpp  solver.hpp  solverExact.hpp
src/: Faiseau.cpp  Geogebra_conics.cpp  files.cpp  main.cpp  path_management.cpp  pencil.cpp  point.hpp  random.cpp  solver.cpp  solverExact.cpp
